<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/bottom_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/bottom_recommendation"
        android:title="@string/recommendation"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_recommendation"/>

    <item android:id="@+id/bottom_red_packet"
        android:title="@string/red_packet"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_red_packet"/>

    <item android:id="@+id/bottom_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"/>

</menu>