<?xml version="1.0" encoding="utf-8"?>
<!--HomeFragment特有的根布局-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mainHomeHeader"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:text="@string/ticket"/>

        <EditText
            android:id="@+id/mainHomeHeaderSearchBox"
            android:layout_width="0dp"
            android:layout_weight="13"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:hint="@string/search_box_hints"
            android:focusable="false"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_main_home_search_bg"
            android:autofillHints="@string/search_box_hints"
            android:inputType="none"/>

        <ImageView
            android:id="@+id/mainHomeHeaderScan"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_scan"
            android:layout_margin="8dp"
            android:contentDescription="@string/scan_content_description" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/baseFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

</LinearLayout>